--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "json-server": "json-server --watch app/data/post_dataset.json --port 3001 --middlewares ./json-server-middleware.js"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.5.0",
         "next": "15.1.4",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-redux": "^9.2.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
